k8s/gcp/oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    shared-gateway-access: "true"
