k8s/gcp/oauth2-proxy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-route
  namespace: oauth2-proxy
spec:
  parentRefs:
  - kind: Gateway
    name: external-https-gateway
    namespace: gateway-infra
  hostnames:
    - atlantis.nishiokatest.xyz
  rules:
  - backendRefs:
    - name: oauth2-proxy
      port: 80
